--- a/crabdraws.html
+++ b/crabdraws.html
@@ -119,8 +119,8 @@
               <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow2" alt="crab painting">
             </div>
             <div class="col-sm">
-            <p>I'm a caring, talented, and modest crab. Altrustic when it comes to giving back to my peers, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
-              (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
+            <h3>I'm a caring, talented, and modest crab. Altrustic when it comes to giving back to my peers, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
+              (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</h3>
             </div>
           </div>
       </div>
