--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <img src="images/wokeuplikethiscrab.jpg" class="img-fluid imageshadow">
             </div>
             <div class="col-5">
-              <p>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.</p>
+              <h3>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.</h3>
         </div>
         </div>
     </div>
